Update code with downloadmanager, notification, detailActivity

--- a/starter/app/src/main/res/layout/content_detail.xml
+++ b/starter/app/src/main/res/layout/content_detail.xml
@@ -8,4 +8,70 @@
     tools:context=".DetailActivity"
     tools:showIn="@layout/activity_detail">
 
+    <TextView
+        android:id="@+id/labelFileNameId"
+        android:layout_width="147dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/label_file_name"
+        android:textSize="@dimen/default_text_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="File name:" />
+
+    <TextView
+        android:id="@+id/repoFileNameId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="@dimen/default_text_size"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/labelFileNameId"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Glide - Image Loading Library by Bump Tech" />
+
+    <TextView
+        android:id="@+id/labelStatusId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="100dp"
+        android:text="@string/label_file_status"
+        android:textSize="@dimen/default_text_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelFileNameId"
+        tools:text="Status:" />
+
+    <TextView
+        android:id="@+id/repoStatusId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="100dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/default_text_size"
+        app:layout_constraintStart_toEndOf="@+id/labelStatusId"
+        app:layout_constraintTop_toBottomOf="@+id/labelFileNameId"
+        tools:text="Success" />
+
+    <Button
+        android:id="@+id/buttonDetailActivity"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        android:textColor="@color/white"
+        android:background="@color/colorAccent"
+        android:text="@string/message_ok"
+        android:textSize="@dimen/default_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Ok" />
 </androidx.constraintlayout.widget.ConstraintLayout>
