--- a/starter/app/src/main/res/layout/content_detail.xml
+++ b/starter/app/src/main/res/layout/content_detail.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layoutDescription="@xml/content_detail_scene"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".DetailActivity"
     tools:showIn="@layout/activity_detail">
 
     <TextView
         android:id="@+id/labelFileNameId"
-        android:layout_width="147dp"
-        android:layout_height="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/label_file_name"
@@ -27,8 +28,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:textSize="@dimen/default_text_size"
         android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/default_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/labelFileNameId"
@@ -51,27 +52,27 @@
         android:id="@+id/repoStatusId"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="100dp"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/default_text_size"
-        app:layout_constraintStart_toEndOf="@+id/labelStatusId"
-        app:layout_constraintTop_toBottomOf="@+id/labelFileNameId"
+        tools:layout_editor_absoluteX="219dp"
+        tools:layout_editor_absoluteY="209dp"
         tools:text="Success" />
 
     <Button
         android:id="@+id/buttonDetailActivity"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
-        android:textColor="@color/white"
         android:background="@color/colorAccent"
         android:text="@string/message_ok"
+        android:textColor="@color/white"
         android:textSize="@dimen/default_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Ok" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.constraintlayout.motion.widget.MotionLayout>
