--- a/starter/app/src/main/res/layout/content_detail.xml
+++ b/starter/app/src/main/res/layout/content_detail.xml
@@ -13,12 +13,11 @@
         android:id="@+id/labelFileNameId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/label_file_name"
         android:textSize="@dimen/default_text_size"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="File name:" />
 
     <TextView
@@ -38,14 +37,13 @@
 
     <TextView
         android:id="@+id/labelStatusId"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="100dp"
         android:text="@string/label_file_status"
         android:textSize="@dimen/default_text_size"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelFileNameId"
+        app:layout_constraintTop_toBottomOf="@id/horiztonalguideline"
         tools:text="Status:" />
 
     <TextView
@@ -54,8 +52,9 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/default_text_size"
-        tools:layout_editor_absoluteX="219dp"
-        tools:layout_editor_absoluteY="209dp"
+        android:layout_marginStart="1dp"
+        app:layout_constraintTop_toBottomOf="@id/horiztonalguideline"
+        app:layout_constraintLeft_toLeftOf="@id/verticalGuideline"
         tools:text="Success" />
 
     <Button
@@ -73,6 +72,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Ok" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/verticalGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="125dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horiztonalguideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="130dp" />
 
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
