--- a/starter/app/src/main/res/xml/content_detail_scene.xml
+++ b/starter/app/src/main/res/xml/content_detail_scene.xml
@@ -37,18 +37,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="100dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/labelFileNameId" />
+            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline" />
 
 
         <Constraint
             android:id="@+id/repoStatusId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_editor_absoluteX="219dp"
-            app:layout_editor_absoluteY="209dp"
-            />
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline"
+            app:layout_constraintLeft_toLeftOf="@id/verticalGuideline"
+          />
 
 
         <Constraint
@@ -60,8 +60,12 @@
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
+        <Constraint
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_begin="143dp"
+            android:layout_width="wrap_content"
+            android:id="@+id/guideline7" />
 
 
     </ConstraintSet>
@@ -94,17 +98,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="100dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/labelFileNameId" />
+            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline" />
 
 
         <Constraint
             android:id="@+id/repoStatusId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_editor_absoluteX="219dp"
-            app:layout_editor_absoluteY="209dp"
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline"
+            app:layout_constraintLeft_toLeftOf="@id/verticalGuideline"
+
             />
 
 
@@ -117,8 +122,7 @@
             android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </ConstraintSet>
 
