--- a/starter/app/src/main/res/layout/content_detail.xml
+++ b/starter/app/src/main/res/layout/content_detail.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.motion.widget.MotionLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/content_detail_scene"
@@ -89,3 +92,5 @@
 
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
+
+</layout>
