--- a/starter/app/src/main/res/values/colors.xml
+++ b/starter/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#F9A825</color>
     <color name="white">#FFFFFF</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="blue">#03a9f4</color>
+    <color name="deepOrange">#ff8a65</color>
 </resources>
