--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,12 +19,14 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/colorPrimary"
             android:text="@string/message_download"
             android:textSize="@dimen/default_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:loadingDefaultBackgroundColor="@color/blue"
+            app:loadingBackgroundColor="@color/deepOrange"
+            app:loadingTextColor="@color/white" />
 
         <ImageView
             android:id="@+id/imageView2"
