--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="large_padding">16dp</dimen>
+    <dimen name="medium_padding">8dp</dimen>
+    <dimen name="small_padding">2dp</dimen>
     <dimen name="default_text_size">20sp</dimen>
     <dimen name="stroke_width">2dp</dimen>
     <dimen name="circle_radius">10dp</dimen>
