--- a/app/src/main/res/xml/content_detail_scene.xml
+++ b/app/src/main/res/xml/content_detail_scene.xml
@@ -2,70 +2,49 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Transition
-        app:autoTransition="animateToEnd"
-        app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@+id/start"
-        app:duration="2300" />
-
-
-    <ConstraintSet android:id="@+id/start">/>
-        <Constraint
+    <ConstraintSet android:id="@+id/start">
+         <Constraint
             android:id="@+id/labelFileNameId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <Constraint
             android:id="@+id/repoFileNameId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/labelFileNameId"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@+id/labelStatusId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline" />
+            app:layout_constraintTop_toTopOf="@+id/guideline"/>
 
 
         <Constraint
             android:id="@+id/repoStatusId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline"
-            app:layout_constraintLeft_toLeftOf="@id/verticalGuideline"
-          />
+            app:layout_constraintStart_toEndOf="@+id/labelStatusId"
+            app:layout_constraintTop_toTopOf="@+id/guideline" />
 
 
         <Constraint
             android:id="@+id/buttonDetailActivity"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-        <Constraint
-            android:layout_height="wrap_content"
-            app:layout_constraintGuide_begin="143dp"
-            android:layout_width="wrap_content"
-            android:id="@+id/guideline7" />
+            app:layout_constraintStart_toStartOf="parent">
+            <CustomAttribute
+                app:attributeName="loadingBackgroundColor"
+                app:customColorValue="@color/blue" />
+        </Constraint>
 
 
     </ConstraintSet>
@@ -75,55 +54,58 @@
             android:id="@+id/labelFileNameId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <Constraint
             android:id="@+id/repoFileNameId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/labelFileNameId"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@+id/labelStatusId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline" />
+            app:layout_constraintTop_toTopOf="@+id/guideline"/>
 
 
         <Constraint
             android:id="@+id/repoStatusId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@id/horiztonalguideline"
-            app:layout_constraintLeft_toLeftOf="@id/verticalGuideline"
-
-            />
+            app:layout_constraintStart_toEndOf="@+id/labelStatusId"
+            app:layout_constraintTop_toTopOf="@+id/guideline" />
 
 
         <Constraint
             android:id="@+id/buttonDetailActivity"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent">
+            <CustomAttribute
+                app:attributeName="loadingBackgroundColor"
+                app:customColorValue="@color/blue" />
+        </Constraint>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="183dp" />
 
     </ConstraintSet>
 
+    <Transition
+        app:constraintSetEnd="@id/end"
+        app:constraintSetStart="@+id/start"
+        app:duration="2300"
+        app:motionInterpolator="linear"
+        />
 </MotionScene>
